--- a/data-structures/maps/stainless.conf
+++ b/data-structures/maps/stainless.conf
@@ -4,13 +4,13 @@
 
 vc-cache            = true
 debug               = [] #["verification"]
-timeout             = 5
+timeout             = 20
 check-models        = false
 print-ids           = false
 print-types         = false
 batched             = true
 strict-arithmetic   = false
-# solvers             = "no-inc:smt-z3:z3-new-core"
-solvers             = "no-inc:smt-z3:z3-master,smt-cvc4"
+solvers             = "no-inc:smt-z3:z3-new-core"
+# solvers             = "no-inc:smt-z3:z3-new-core,smt-cvc4"
 check-measures      = yes
 infer-measures      = true
