Use inlineOnce instead of inline for opaque functions

--- a/WIP/SLOW/longmap/stainless.conf
+++ b/WIP/SLOW/longmap/stainless.conf
@@ -3,7 +3,7 @@
 # options listed by `stainless --help`
 
 vc-cache            = true
-debug               = [] #["verification"]
+#debug               = ["verification"]
 timeout             = 20
 check-models        = false
 print-ids           = false
@@ -15,4 +15,5 @@ strict-arithmetic   = false
 # solvers             = "smt-z3,no-inc:smt-z3:z3-master tactic.default_tactic=smt sat.euf=true"
 solvers             = "smt-cvc4,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
 check-measures      = yes
-infer-measures      = true
+infer-measures      = false
+no-colors           = true
