Added comments to help reading the stainless file

--- a/WIP/bitstream/stainless.conf
+++ b/WIP/bitstream/stainless.conf
@@ -1,4 +1,5 @@
 timeout = 20
 batched = true
 strict-arithmetic = false
+no-colors = true
 solvers = "smt-cvc4,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
