working on parent class, add getCurrentKeyValueList

--- a/data-structures/longmap/stainless.conf
+++ b/data-structures/longmap/stainless.conf
@@ -13,6 +13,7 @@ strict-arithmetic   = false
 # solvers             = "no-inc:smt-z3:z3-new-core"
 # solvers             = "no-inc:smt-z3:z3-new-core,smt-cvc4"
 # solvers             = "smt-z3,no-inc:smt-z3:z3-master tactic.default_tactic=smt sat.euf=true"
-solvers             = "smt-cvc4,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
+# solvers             = "smt-cvc4,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
+solvers             = "smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
 check-measures      = yes
 infer-measures      = false
