new ensuring notation, use cache and infer measures

--- a/data-structures/longmap/stainless.conf
+++ b/data-structures/longmap/stainless.conf
@@ -2,7 +2,7 @@
 # The settings below correspond to the various
 # options listed by `stainless --help`
 
-vc-cache            = false
+vc-cache            = true
 # debug               = ["verification", "smt"]
 timeout             = 20
 check-models        = false
@@ -16,4 +16,4 @@ strict-arithmetic   = false
 # solvers             = "smt-cvc4,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
 solvers             = "smt-cvc5,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
 check-measures      = yes
-infer-measures      = false
+infer-measures      = true
