new implementaiton using swap instead of Cell wiht extern. Does not verify yet

--- a/data-structures/longmap/stainless.conf
+++ b/data-structures/longmap/stainless.conf
@@ -4,7 +4,7 @@
 
 vc-cache            = true
 # debug               = ["verification", "smt"]
-timeout             = 30
+timeout             = 20
 check-models        = false
 print-ids           = false
 print-types         = false
@@ -14,6 +14,7 @@ strict-arithmetic   = false
 # solvers             = "no-inc:smt-z3:z3-new-core,smt-cvc4"
 # solvers             = "smt-z3,no-inc:smt-z3:z3-master tactic.default_tactic=smt sat.euf=true"
 # solvers             = "smt-cvc4,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
-solvers             = "smt-cvc5,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
+# solvers             = "smt-cvc5,smt-z3"
+# solvers             = "smt-cvc5"
 check-measures      = yes
 infer-measures      = true
