--- a/data-structures/longmap/stainless.conf
+++ b/data-structures/longmap/stainless.conf
@@ -10,11 +10,6 @@ print-ids           = false
 print-types         = false
 batched             = true
 strict-arithmetic   = false
-# solvers             = "no-inc:smt-z3:z3-new-core"
-# solvers             = "no-inc:smt-z3:z3-new-core,smt-cvc4"
-# solvers             = "smt-z3,no-inc:smt-z3:z3-master tactic.default_tactic=smt sat.euf=true"
-# solvers             = "smt-cvc4,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
-# solvers             = "smt-cvc5,smt-z3"
-# solvers             = "smt-cvc5"
+solvers             = "smt-cvc5,smt-z3"
 check-measures      = yes
 infer-measures      = true
