working on the memoisation

--- a/lexers/regex/verifiedlexer/stainless.conf
+++ b/lexers/regex/verifiedlexer/stainless.conf
@@ -8,7 +8,7 @@ check-models        = false
 print-ids           = false
 print-types         = false
 batched             = true
-strict-arithmetic   = true
+strict-arithmetic   = false
 solvers             = "smt-cvc5,smt-z3,smt-cvc4"
 check-measures      = yes
 infer-measures      = true
