--- a/data-structures/maps/mutablemaps/stainless.conf
+++ b/data-structures/maps/mutablemaps/stainless.conf
@@ -13,4 +13,4 @@ strict-arithmetic   = false
 solvers             = "smt-cvc5,smt-z3,smt-cvc4"
 check-measures      = yes
 infer-measures      = true
-simplifier           = "bland"
+simplifier           = "ol"
