--- a/tutorials/dispenser/stainless.conf
+++ b/tutorials/dispenser/stainless.conf
@@ -1,7 +1,7 @@
-vc-cache = true
+vc-cache = false
 timeout = 10
 fail-early = true
 strict-arithmetic = false
-solvers="smt-cvc5"
+solvers="eval,smt-cvc5"
 no-colors=true
 ignore-models=true
