use vc cache more

--- a/data-structures/maps/mutablemaps/stainless.conf
+++ b/data-structures/maps/mutablemaps/stainless.conf
@@ -14,3 +14,4 @@ solvers             = "smt-cvc5,smt-z3,smt-cvc4"
 check-measures      = yes
 infer-measures      = true
 simplifier           = "ol"
+compact              = true
