--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Test solvers availability
       run: cvc5 --version && z3 --version && cvc4 --version
     - name: Bolts Tests
-      run: pwd && ls -al && ./run_tests.sh
+      run: ./run-tests.sh
   fail_if_pull_request_is_draft:
     if: github.event.pull_request.draft == true
     runs-on: [self-hosted, linux]
