run on laraquad2

--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   tests:
     if: github.event.pull_request.draft == false
-    runs-on: [self-hosted, linux]
+    runs-on: [laraquad2_runner01, self-hosted, linux]
     env:
       # define Java options for both official sbt and sbt-extras
       JAVA_OPTS: -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M
