Download sbt in CI

--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -22,7 +22,11 @@ jobs:
       with:
         distribution: temurin
         java-version: 17
-        cache: sbt
+    - name: Install and unpack sbt
+      run: |
+        wget https://github.com/sbt/sbt/releases/download/v1.10.1/sbt-1.10.1.tgz
+        tar xfz sbt-1.10.1.tgz
+        echo "PATH=./sbt/bin/:$PATH" >> "$GITHUB_ENV"
     - name: Install stainless and solvers
       run: ./install_stainless_and_solvers.sh $GITHUB_WORKSPACE/.local/bin $GITHUB_WORKSPACE/.local
     - name: Add stainless to PATH
