--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -24,7 +24,7 @@ jobs:
         java-version: 17
     - name: Install and unpack sbt
       run: |
-        wget --progress=dot https://github.com/sbt/sbt/releases/download/v1.10.1/sbt-1.10.1.tgz
+        wget --no-verbose https://github.com/sbt/sbt/releases/download/v1.10.1/sbt-1.10.1.tgz
         tar xfz sbt-1.10.1.tgz
         echo "PATH=./sbt/bin/:$PATH" >> "$GITHUB_ENV"
     - name: Check sbt availability and version
