--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -9,11 +9,9 @@ jobs:
     if: github.event.pull_request.draft == false
     runs-on: [self-hosted, linux]
     env:
-      JAVA_OPTS_TMP_DIR: $GITHUB_WORKSPACE/.local/tmp_java
       # define Java options for both official sbt and sbt-extras
-      JAVA_OPTS: -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M -Djava.io.tmpdir=$GITHUB_WORKSPACE/.local/tmp_java
-      JVM_OPTS:  -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M -Djava.io.tmpdir=$GITHUB_WORKSPACE/.local/tmp_java
-      SBT_OPTS: -Djava.io.tmpdir=$GITHUB_WORKSPACE/.local/tmp_java --sbt-dir $GITHUB_WORKSPACE/.local/tmp_java
+      JAVA_OPTS: -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M
+      JVM_OPTS:  -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -24,6 +22,8 @@ jobs:
       with:
         distribution: temurin
         java-version: 17
+    - name: Setup temp folder
+      run: echo "JAVA_OPTS_TMP_DIR=$GITHUB_WORKSPACE/.local/tmp_java" >> "$GITHUB_ENV" && echo "JAVA_OPTS=$JAVA_OPTS -Djava.io.tmpdir=$JAVA_OPTS_TMP_DIR" >> "$GITHUB_ENV" && echo "JVM_OPTS=$JVM_OPTS -Djava.io.tmpdir=$JAVA_OPTS_TMP_DIR" >> "$GITHUB_ENV" && echo "SBT_OPTS=-Djava.io.tmpdir=$JAVA_OPTS_TMP_DIR --sbt-dir=$JAVA_OPTS_TMP_DIR >> "$GITHUB_ENV"
     - name: Install stainless and solvers
       run: ./install_stainless_and_solvers.sh $GITHUB_WORKSPACE/.local/bin $GITHUB_WORKSPACE/.local && echo "PATH=$GITHUB_WORKSPACE/.local/bin:$PATH" >> "$GITHUB_ENV"
     - name: Add stainless to PATH
