--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -5,13 +5,14 @@ on:
     branches:
       - main
 jobs:
+  setup:
+    uses: ./.github/workflows/setup.yml
   tests:
     runs-on: [self-hosted, linux]
+    needs: setup
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Setup
-      uses: ./.github/workflows/setup.yml
     - name: Bolts Tests
       run: ./run-tests.sh --admit-vcs
   fail_if_pull_request_is_draft:
