--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+
+env:
+  # define Java options for both official sbt and sbt-extras
+  JAVA_OPTS: -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M 
+  JVM_OPTS:  -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M 
+  JAVA_OPTS_TMP_DIR: /tmp/tmp_${{ github.run_id }}_${{ github.run_attempt }}
 jobs:
   tests:
     runs-on: [self-hosted, linux]
@@ -12,6 +18,10 @@ jobs:
       uses: actions/checkout@v4
     - name: Setup
       uses: ./.github/workflows/setup
+      with:
+        java-opts: ${{ env.JAVA_OPTS }}
+        java-version: 17
+        temp-dir: "/tmp/tmp_${{ github.run_id }}_${{ github.run_attempt }}"
     - name: Bolts Tests
       run: ./run-tests.sh --admit-vcs
   fail_if_pull_request_is_draft:
