--- a/.github/workflows/setup/action.yml
+++ b/.github/workflows/setup/action.yml
@@ -1,38 +1,46 @@
 name: Bolts Setup
-on:
-  workflow_call:
-jobs:
-  setup:
-    runs-on: [self-hosted, linux]
-    env:
-      # define Java options for both official sbt and sbt-extras
-      JAVA_OPTS: -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M 
-      JVM_OPTS:  -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M 
-      JAVA_OPTS_TMP_DIR: /tmp/tmp_${{ github.run_id }}_${{ github.run_attempt }}
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        submodules: recursive
-    - name: Setup JDK
-      uses: actions/setup-java@v4
-      with:
-        distribution: temurin
-        java-version: 17
-    - name: Setup java options
-      run: |
-          echo "JAVA_OPTS=$JAVA_OPTS -Djava.io.tmpdir=$JAVA_OPTS_TMP_DIR" >> "$GITHUB_ENV" && \
-          echo "JVM_OPTS=$JVM_OPTS -Djava.io.tmpdir=$JAVA_OPTS_TMP_DIR" >> "$GITHUB_ENV" && \
-          echo "SBT_OPTS=-Djava.io.tmpdir=$JAVA_OPTS_TMP_DIR --sbt-dir $JAVA_OPTS_TMP_DIR" >> "$GITHUB_ENV"
-    - name: Creating temp folder
-      run: rm -rf $JAVA_OPTS_TMP_DIR && mkdir -p $JAVA_OPTS_TMP_DIR && chmod 777 $JAVA_OPTS_TMP_DIR
-    - name: Install stainless and solvers
-      run: ./install_stainless_and_solvers.sh $GITHUB_WORKSPACE/.local/bin $GITHUB_WORKSPACE/.local && echo "PATH=$GITHUB_WORKSPACE/.local/bin:$PATH" >> "$GITHUB_ENV"
-    - name: Add stainless to PATH
-      run: echo "$GITHUB_WORKSPACE/.local/stainless/frontends/dotty/target/universal/stage/bin" >> $GITHUB_PATH && echo "PATH=$GITHUB_WORKSPACE/.local/stainless/frontends/dotty/target/universal/stage/bin:$PATH" >> "$GITHUB_ENV"
-    - name: Test stainless availability
-      run: stainless-dotty --version
-    - name: Add solvers to PATH
-      run: echo "$GITHUB_WORKSPACE/.local/bin" >> $GITHUB_PATH
-    - name: Test solvers availability
-      run: cvc5 --version && z3 --version && cvc4 --version
+description: Setup for Bolts CI
+inputs: 
+  java-opts:
+    description: 'Java options for both official sbt and sbt-extras'
+    required: true
+    default: '-Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M'
+  temp-dir:
+    description: 'Temporary directory for Java options'
+    required: true
+    default: '/tmp/tmp_${{ github.run_id }}_${{ github.run_attempt }}'
+  java-version:
+    description: 'Java version to use'
+    required: true
+    default: '17'
+runs:
+  using: 'composite'
+  steps:
+  - name: Checkout
+    uses: actions/checkout@v4
+    with:
+      submodules: recursive
+  - name: Setup JDK
+    uses: actions/setup-java@v4
+    with:
+      distribution: temurin
+      java-version: ${{ inputs.java-version }}
+  - name: Setup java options
+    run: |
+        echo "JAVA_OPTS=${{ inputs.java-opts }}" >> "$GITHUB_ENV" && \
+        echo "JVM_OPTS=${{ inputs.java-opts }}" >> "$GITHUB_ENV" && \
+        echo "JAVA_OPTS=$JAVA_OPTS -Djava.io.tmpdir=$JAVA_OPTS_TMP_DIR" >> "$GITHUB_ENV" && \
+        echo "JVM_OPTS=$JVM_OPTS -Djava.io.tmpdir=${{ inputs.temp-dir }}" >> "$GITHUB_ENV" && \
+        echo "SBT_OPTS=-Djava.io.tmpdir=${{ inputs.temp-dir }} --sbt-dir ${{ inputs.temp-dir }}" >> "$GITHUB_ENV"
+  - name: Creating temp folder
+    run: rm -rf ${{ inputs.temp-dir }} && mkdir -p ${{ inputs.temp-dir }} && chmod 777 ${{ inputs.temp-dir }}
+  - name: Install stainless and solvers
+    run: ./install_stainless_and_solvers.sh $GITHUB_WORKSPACE/.local/bin $GITHUB_WORKSPACE/.local && echo "PATH=$GITHUB_WORKSPACE/.local/bin:$PATH" >> "$GITHUB_ENV"
+  - name: Add stainless to PATH
+    run: echo "$GITHUB_WORKSPACE/.local/stainless/frontends/dotty/target/universal/stage/bin" >> $GITHUB_PATH && echo "PATH=$GITHUB_WORKSPACE/.local/stainless/frontends/dotty/target/universal/stage/bin:$PATH" >> "$GITHUB_ENV"
+  - name: Test stainless availability
+    run: stainless-dotty --version
+  - name: Add solvers to PATH
+    run: echo "$GITHUB_WORKSPACE/.local/bin" >> $GITHUB_PATH
+  - name: Test solvers availability
+    run: cvc5 --version && z3 --version && cvc4 --version
