--- a/.github/workflows/setup/action.yml
+++ b/.github/workflows/setup/action.yml
@@ -32,15 +32,22 @@ runs:
         echo "JAVA_OPTS=$JAVA_OPTS -Djava.io.tmpdir=$JAVA_OPTS_TMP_DIR" >> "$GITHUB_ENV" && \
         echo "JVM_OPTS=$JVM_OPTS -Djava.io.tmpdir=${{ inputs.temp-dir }}" >> "$GITHUB_ENV" && \
         echo "SBT_OPTS=-Djava.io.tmpdir=${{ inputs.temp-dir }} --sbt-dir ${{ inputs.temp-dir }}" >> "$GITHUB_ENV"
+    shell: bash
   - name: Creating temp folder
     run: rm -rf ${{ inputs.temp-dir }} && mkdir -p ${{ inputs.temp-dir }} && chmod 777 ${{ inputs.temp-dir }}
+    shell: bash
   - name: Install stainless and solvers
     run: ./install_stainless_and_solvers.sh $GITHUB_WORKSPACE/.local/bin $GITHUB_WORKSPACE/.local && echo "PATH=$GITHUB_WORKSPACE/.local/bin:$PATH" >> "$GITHUB_ENV"
+    shell: bash
   - name: Add stainless to PATH
     run: echo "$GITHUB_WORKSPACE/.local/stainless/frontends/dotty/target/universal/stage/bin" >> $GITHUB_PATH && echo "PATH=$GITHUB_WORKSPACE/.local/stainless/frontends/dotty/target/universal/stage/bin:$PATH" >> "$GITHUB_ENV"
+    shell: bash
   - name: Test stainless availability
     run: stainless-dotty --version
+    shell: bash
   - name: Add solvers to PATH
     run: echo "$GITHUB_WORKSPACE/.local/bin" >> $GITHUB_PATH
+    shell: bash
   - name: Test solvers availability
     run: cvc5 --version && z3 --version && cvc4 --version
+    shell: bash
