--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -1,4 +1,4 @@
-name: Bolts CI
+name: Bolts CI with admit VCs
 on:
   pull_request:
   push:
@@ -11,7 +11,7 @@ env:
   JVM_OPTS:  -Dsbt.io.implicit.relative.glob.conversion=allow -Xss512M -Xms1024M -Xmx12G -XX:MaxMetaspaceSize=2G -XX:+UseCodeCacheFlushing -XX:ReservedCodeCacheSize=768M 
   JAVA_OPTS_TMP_DIR: /tmp/tmp_${{ github.run_id }}_${{ github.run_attempt }}
 jobs:
-  tests:
+  bolts-admit-vcs:
     runs-on: [self-hosted, linux]
     steps:
     - name: Checkout
@@ -22,7 +22,7 @@ jobs:
         java-opts: ${{ env.JAVA_OPTS }}
         java-version: 17
         temp-dir: "/tmp/tmp_${{ github.run_id }}_${{ github.run_attempt }}"
-    - name: Bolts Tests
+    - name: Bolts admit VCs tests
       run: ./run-tests.sh --admit-vcs
   fail_if_pull_request_is_draft:
     if: github.event.pull_request.draft == true
