Adding Zippers implementation and verification, and some benchmarks (#116)
* add sbt project with plugin

* move regex to an sbt project

* original version

* working on the memoisation

* not working

* add longMap + work on cache

* for now issue with illegal capturing

* to specific, not working but almost

* working on memoised regex

* working

* cached version proven

* working examples

* new hashmap without ordering

* add new lemmas in ListMaps for forall

* Formally verified cache for regex

* add removeUselessConcat simplification for regex + equivalence proof

* add a simplification function that is sound

* working on regex

* as symlink

* ensuring as method and not infix

* implementation of Zippers (with List for Set, I'm changing to Set to try)

* continue working on zippers
implementation seems done, now working on the proof

* working on zipper

* remove chassot pacakge, obsolete

* finalise merge

* add hashset symlink

* add a few imports

* start to migrate to sets

* continue replacing list by set

* Move to Stainless Set, passing tests

* working on zippers

* working

* remove useless imports

* work on zippers

* add some lemmas about flatmap

* add getwitness for sets

* working on zppier

* working

* change to ghost

* change Context to be a class with invariant to emulate refinement types

* Prove that the derivation of zippers is associative

* working on zipper proof

* proving stuff

* proving equivalence of base cases

* add generalisations of union and concat to base regex

* work on regex

* revert the generalised regex

* add generalised union and concat as method

* matchRGenUnionSpec and matchRGenConcatSpec

* working on zipper proof

* working on Zipper theorem

* working on zipper proof

* working on big proof direct induction - not working for star

* working on zipper proof

* working on the zipper proof

* workin

--- a/.github/workflows/bolts-CI.yml
+++ b/.github/workflows/bolts-CI.yml
@@ -24,6 +24,8 @@ jobs:
         temp-dir: "/tmp/tmp_${{ github.run_id }}_${{ github.run_attempt }}"
     - name: Bolts admit VCs tests
       run: ./run-tests.sh --admit-vcs
+    - name: Clean up
+      run: rm -rf $JAVA_OPTS_TMP_DIR
   fail_if_pull_request_is_draft:
     if: github.event.pull_request.draft == true
     runs-on: [self-hosted, linux]
