update qoi to verify, WIP

--- a/qoi/stainless.conf
+++ b/qoi/stainless.conf
@@ -2,6 +2,8 @@ vc-cache = true
 timeout = 300
 strict-arithmetic = false
 batched = true
-solvers = "smt-cvc4,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
+# solvers = "smt-cvc4,smt-cvc5,smt-z3,no-inc:smt-z3:z3 tactic.default_tactic=smt sat.euf=true"
+solvers = "smt-cvc4,smt-cvc5,smt-z3"
 infer-measures = false
+simplifier = "bland"
 no-colors = true
