use classtag to avoid boxing in the LongMap

--- a/data-structures/maps/mutablemaps/stainless.conf
+++ b/data-structures/maps/mutablemaps/stainless.conf
@@ -13,5 +13,5 @@ strict-arithmetic   = false
 solvers             = "smt-cvc5,smt-z3,smt-cvc4"
 check-measures      = yes
 infer-measures      = true
-simplifier           = "ol"
+simplifier           = "bland"
 compact              = true
