new implementation of find longest match, ready for memoization, with memoization. TODO: add a lex version that uses this one

--- a/lexers/regex/verifiedlexer/stainless.conf
+++ b/lexers/regex/verifiedlexer/stainless.conf
@@ -7,7 +7,7 @@ timeout             = 180
 check-models        = false
 print-ids           = false
 print-types         = false
-batched             = true
+batched             = false
 strict-arithmetic   = false
 solvers             = "smt-cvc5,smt-z3"
 check-measures      = yes
